--- a/gefrusteerd.html
+++ b/gefrusteerd.html
@@ -14,8 +14,7 @@
   <body class="gefrusteerdachtergrond">
     <header>
         <a href="index.html"><img class="logo" src="styles/Photo/ns_Logo.svg" alt="logo Nederlandse Spoorwegen"></a>
-        <h1>Verhalenplanner</h1>
-          <nav id="navi-bar">
+          <nav >
               <form>
                 <img class="vergrootglas" src="styles/Iconen/NSvergootglas.svg"><input id="zoekhoofd" for="search" type="text" name="search" placeholder="Zoeken..">
               </form>
