Project web final
anticlimax: alle treinen liggen er nog uit maar bij deze presenteer ik de NS verhalen pagina voor al je vertragingen.

--- a/aanmelden-registeren.html
+++ b/aanmelden-registeren.html
@@ -34,7 +34,10 @@
       </nav>
     </header>
 
-    <section action="index.html" class="aanmeld-formulier">
+    <main>
+
+
+    <section class="aanmeld-formulier">
        <h1>Log in NS verhalenplanner</h1>
 
         <form>
@@ -104,6 +107,8 @@
 
     </section>
   </div>
+
+  </main>
 
 
   <script src="./styles/JS/aanmeldformulier.js"></script>
