--- a/droom.html
+++ b/droom.html
@@ -41,7 +41,8 @@
         <img id="toevoegen" src="./styles/Iconen/toevoegen.png" alt="toevoegen" />
         <span>Toevoegen</span>
   </button>
-  
+
+  <main>
   <p id="droom-1">
     Slierten mist zwerven rond mijn benen. Net zat ik nog in Bus 21. Het was warm, zweet parelde langs mijn slapen, mijn zoon sliep. Nu loop ik over een smal pad langs eindeloos diepe bouwputten. Een heipaal beukt zich een weg naar het binnenste van mijn oor.
   </p>
@@ -57,6 +58,8 @@
   <p id="droom-4">
      Op het Tahrirplein probeer ik een paar schoenen voor mijn zoon te kopen, maar het zoeken wordt mij belet door duizenden betogers die denken dat mijn zoontje Mohammed El Baradei is. Ze nemen hem op de schouders, mijn zoontje lacht. Daar komen mannen op kamelen aan.
   </p>
+
+    </main>
 
   <!-- Titel en achtergrond -->
   <img id="achtergronddroom" src="styles/Photo/achtergronddroom.svg" alt="Achtergrond Droom">
