--- a/gefrusteerd.html
+++ b/gefrusteerd.html
@@ -27,6 +27,7 @@
                 </ul>
               </nav>
     </header>
+
     <main>
     <img class="gefrustreerdtitel" src="./styles/Photo/gifdroom/titelgefrustreerd.gif" alt="Titel gefrustreerd">
 
@@ -63,6 +64,7 @@
   </p>
 </main>
 
+    <!-- tekst vlakken van het verhaal -->
   <img id="gifgef1" src="./styles/Photo/gifdroom/Tekstvlak1.gif" alt="Gefrustreerd tekstvlak">
   <img id="gifgef2" src="./styles/Photo/gifdroom/ttekstvlak2.gif" alt="Gefrustreerd tekstvlak">
   <img id="gifgef3" src="./styles/Photo/gifdroom/tekstvalk3.gif" alt="Gefrustreerd tekstvlak">
@@ -70,11 +72,13 @@
   <img id="gifgef5" src="./styles/Photo/gifdroom/tekstvlak5.gif" alt="Gefrustreerd tekstvlak">
   <img id="gifgef6" src="./styles/Photo/gifdroom/tekstvlak6.gif" alt="Gefrustreerd tekstvlak">
 
+  <!-- woorden in het verhaal -->
   <img id="woord1" src="./styles/Photo/gifdroom/klootzak.gif" alt="Gefrustreerd woord">
   <img id="woord2" src="./styles/Photo/gifdroom/stinkplank.gif" alt="Gefrustreerd woord">
   <img id="woord3" src="./styles/Photo/gifdroom/godverdomme.gif" alt="Gefrustreerd woord">
   <img id="woord4" src="./styles/Photo/gifdroom/fokkingkloteminuten.gif" alt="Gefrustreerd woord">
 
+    <!-- brokstukken in het verhaal -->
   <img id="scheur1" src="./styles/Photo/gifdroom/scheur1.gif" alt="Gefrustreerd scheur">
   <img id="scheur2" src="./styles/Photo/gifdroom/scheur1.gif" alt="Gefrustreerd scheur">
   <img id="scheur3" src="./styles/Photo/gifdroom/scheur1.gif" alt="Gefrustreerd scheur">
