--- a/hongerwinter.html
+++ b/hongerwinter.html
@@ -42,6 +42,7 @@
         <span>Toevoegen</span>
   </button>
 
+  <main>
   <p id="hongerwinter-1">
     Mijn voeten en handen heb ik ingezwachteld tegen de kou. Kranten tegen m’n borst. Ik duw een handkar voort waarin mijn zoon vredig ligt te slapen. Centraal Station. De tramrails liggen er kaal bij. Het hout tussen de rails is al lang weggenomen. Ik word geacht het IJ over te steken om in de dorpen boven Amsterdam mijn gouden trouwring te ruilen tegen groenten en aardappelen.
    </p>
@@ -69,13 +70,16 @@
     Maar ook hij kan het boek niet vinden. Hij raadt me aan het magazijn te proberen. Daar moet nog een exemplaar liggen. Het magazijn bevindt zich in de kelders, die staan helemaal onder water. Ik staak mijn zoektocht.
     Uren later, even buiten de stad, op een mestvaalt waar tot voor kort de 18e eeuwse boerenhofstede Bosch en Lommer gelegen was, vind ik een paar babyschoentjes in redelijke staat.
   </p>
+</main>
 
+<!-- Achtergrond en titel hongerwinter -->
   <img id="achtergrondhongerwinter2" src="styles/Photo/honger2.png" alt="achtergrond hongerwinter">
   <img id="achtergrondhongerwinter" src="styles/Photo/achtergrondhongerwinter.png" alt="achtergrond hongerwinter">
 
   <img id="titelhongerwinter" src="styles/Photo/Hongerwintertitel.png" alt="Titel Hongerwintertitel">
 </section>
 
+<!-- code voor script. code is van de volgende site afgehaald en gekoppeld http://minimal.be/lab/jQuery.eraser en de jquery volg code is van w3schools  -->
 <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 <script src="./styles/JS/jquery.eraser.js"></script>
 <script src="./styles/JS/script.js"></script>
