--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/style.css" />
-    <!-- Font awesome voor verhalenfooter-->
+    <!-- Font awesome voor verhalenfooter van http://fontawesome.io/-->
     <link rel="stylesheet" href="styles/css/font-awesome.css" />
 
     <title> Verhalenplanner NS </title>
@@ -21,7 +21,7 @@
 
   <nav >
     <form>
-      <img class="vergrootglas" src="styles/Iconen/NSvergootglas.svg">
+      <img class="vergrootglas" src="styles/Iconen/NSvergootglas.svg" alt="Vergrootglas voor het zoeken">
       <input id="directsearch" type="text" name="search" placeholder="Zoeken..">
       <ul id="searchdropdown">
         <li><strong>Gefr</strong>ustreerd</li>
