--- a/verhalen.html
+++ b/verhalen.html
@@ -33,7 +33,7 @@
 
 
 
-
+<main>
 <h1>Verhalen</h1>
 <form class="formverhaal">
  <fieldset>
@@ -165,10 +165,11 @@
     </footer>
   </article>
 
+  </main>
+
 
 
 </section>
-<footer></footer>
 
   </body>
 </html>
